fix(gradle): let kotlin read coroutines