@@ -36,6 +36,8 @@ java {
 application {
     mainModule = 'de.dargmuesli.spotitag'
     mainClass = 'de.dargmuesli.spotitag.MainApp'
+
+    applicationDefaultJvmArgs = ["--add-reads", "kotlin.stdlib=kotlinx.coroutines.core"]
 }
 
 kotlin {
